--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ start = "stremio_imvdb.addon:start"
 python = "^3.7"
 aiohttp = "^3.5"
 parsel = "^1.5"
+aiohttp_jinja2 = "^1.1"
+jinja2 = "^2.10"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
