--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ aiohttp = "^3.5"
 parsel = "^1.5"
 aiohttp_jinja2 = "^1.1"
 jinja2 = "^2.10"
+cachetools = "^3.1"
+asyncache = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
